[gd_scene load_steps=15 format=2]

[ext_resource path="res://TitleScreen/backdrop.png" type="Texture" id=1]
[ext_resource path="res://TitleScreen/Button.png" type="Texture" id=2]
[ext_resource path="res://TitleScreen/ButtonPressed.png" type="Texture" id=3]
[ext_resource path="res://TitleScreen.gd" type="Script" id=4]
[ext_resource path="res://NeutronsDemo-Yz0Va.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Run.wav" type="AudioStream" id=6]
[ext_resource path="res://WhiteSystematticDuo-BWY5w.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://BraveEightyoneRegular-ZVGvm.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 500
outline_size = 25
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=4]
resource_name = "levels"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Levels:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1024, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 500
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=6]
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("Buttons/Buttons and stuff:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1000 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Buttons/Buttons and stuff:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backdrop" type="Sprite" parent="Control"]
position = Vector2( 512, 256 )
texture = ExtResource( 1 )

[node name="Title" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -268.0
margin_right = 515.0
margin_bottom = -145.0
rect_pivot_offset = Vector2( 429.5, 0 )
custom_fonts/font = SubResource( 1 )
text = "Exact Command"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -215.99
margin_top = -87.3059
margin_right = 169.01
margin_bottom = -0.305908
custom_fonts/font = SubResource( 2 )
text = "A 2BrosInACup 
Production"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="CanvasLayer" parent="."]

[node name="Buttons and stuff" type="Control" parent="Buttons"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1000.0
margin_bottom = 1000.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="TextureButton" parent="Buttons/Buttons and stuff"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1024.0
margin_top = -62.0001
margin_right = 1024.0
margin_bottom = 962.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 1024, -0.000244141 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Buttons and stuff/Start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1024.0
margin_top = -232.0
margin_right = 1024.0
margin_bottom = 380.0
rect_pivot_offset = Vector2( 571.5, 0 )
custom_fonts/font = SubResource( 3 )
text = "Start"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="TextureButton" parent="Buttons/Buttons and stuff"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1024.0
margin_top = 47.9999
margin_right = 1024.0
margin_bottom = 1072.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 1024, -0.000244141 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Buttons and stuff/Level"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1024.0
margin_top = -232.0
margin_right = 1024.0
margin_bottom = 380.0
rect_pivot_offset = Vector2( 571.5, 0 )
custom_fonts/font = SubResource( 3 )
text = "Levels"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="Buttons/Buttons and stuff"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1024.0
margin_top = 158.0
margin_right = 1024.0
margin_bottom = 1182.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 1024, -0.000244141 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Buttons and stuff/Exit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1024.0
margin_top = -232.0
margin_right = 1040.0
margin_bottom = 380.0
rect_pivot_offset = Vector2( 571.5, 0 )
custom_fonts/font = SubResource( 3 )
text = "exit"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelsAnime" type="AnimationPlayer" parent="Buttons/Buttons and stuff"]
anims/levels = SubResource( 4 )

[node name="Levels" type="Control" parent="Buttons/Buttons and stuff"]
margin_left = -1024.0
margin_right = -984.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="TextureButton" parent="Buttons/Buttons and stuff/Levels"]
margin_left = 24.0
margin_top = 238.0
margin_right = 2072.0
margin_bottom = 1262.0
rect_scale = Vector2( 0.05, 0.1 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Buttons and stuff/Levels/Level1"]
margin_right = 1024.0
margin_bottom = 1024.0
rect_scale = Vector2( 2, 1 )
custom_fonts/font = SubResource( 5 )
text = "1"
align = 1
valign = 1
autowrap = true

[node name="Level2" type="TextureButton" parent="Buttons/Buttons and stuff/Levels"]
modulate = Color( 0.3, 0.3, 0.3, 1 )
margin_left = 136.0
margin_top = 238.0
margin_right = 2184.0
margin_bottom = 1262.0
rect_scale = Vector2( 0.05, 0.1 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Buttons/Buttons and stuff/Levels/Level2"]
margin_right = 1024.0
margin_bottom = 1024.0
rect_scale = Vector2( 2, 1 )
custom_fonts/font = SubResource( 5 )
text = "2"
align = 1
valign = 1
autowrap = true

[node name="Level3" type="TextureButton" parent="Buttons/Buttons and stuff/Levels"]
modulate = Color( 0.3, 0.3, 0.3, 1 )
margin_left = 248.0
margin_top = 238.0
margin_right = 2296.0
margin_bottom = 1262.0
rect_scale = Vector2( 0.05, 0.1 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Buttons and stuff/Levels/Level3"]
margin_right = 1024.0
margin_bottom = 1024.0
rect_scale = Vector2( 2, 1 )
custom_fonts/font = SubResource( 5 )
text = "3"
align = 1
valign = 1
autowrap = true

[node name="Level4" type="TextureButton" parent="Buttons/Buttons and stuff/Levels"]
modulate = Color( 0.3, 0.3, 0.3, 1 )
margin_left = 24.0
margin_top = 352.0
margin_right = 2072.0
margin_bottom = 1376.0
rect_scale = Vector2( 0.05, 0.1 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Buttons and stuff/Levels/Level4"]
margin_right = 1024.0
margin_bottom = 1024.0
rect_scale = Vector2( 2, 1 )
custom_fonts/font = SubResource( 5 )
text = "4"
align = 1
valign = 1
autowrap = true

[node name="Level5" type="TextureButton" parent="Buttons/Buttons and stuff/Levels"]
modulate = Color( 0.3, 0.3, 0.3, 1 )
margin_left = 136.0
margin_top = 352.0
margin_right = 2184.0
margin_bottom = 1376.0
rect_scale = Vector2( 0.05, 0.1 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Buttons and stuff/Levels/Level5"]
margin_right = 1024.0
margin_bottom = 1024.0
rect_scale = Vector2( 2, 1 )
custom_fonts/font = SubResource( 5 )
text = "5"
align = 1
valign = 1
autowrap = true

[node name="Level6" type="TextureButton" parent="Buttons/Buttons and stuff/Levels"]
modulate = Color( 0.3, 0.3, 0.3, 1 )
margin_left = 248.0
margin_top = 352.0
margin_right = 2296.0
margin_bottom = 1376.0
rect_scale = Vector2( 0.05, 0.1 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Buttons and stuff/Levels/Level6"]
margin_right = 1024.0
margin_bottom = 1024.0
rect_scale = Vector2( 2, 1 )
custom_fonts/font = SubResource( 5 )
text = "6"
align = 1
valign = 1
autowrap = true

[node name="Level7" type="TextureButton" parent="Buttons/Buttons and stuff/Levels"]
modulate = Color( 0.3, 0.3, 0.3, 1 )
margin_left = 32.0
margin_top = 464.0
margin_right = 2080.0
margin_bottom = 1488.0
rect_scale = Vector2( 0.05, 0.1 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Buttons and stuff/Levels/Level7"]
margin_right = 1024.0
margin_bottom = 1024.0
rect_scale = Vector2( 2, 1 )
custom_fonts/font = SubResource( 5 )
text = "7"
align = 1
valign = 1
autowrap = true

[node name="Level8" type="TextureButton" parent="Buttons/Buttons and stuff/Levels"]
modulate = Color( 0.3, 0.3, 0.3, 1 )
margin_left = 238.4
margin_top = 464.0
margin_right = 2286.4
margin_bottom = 1488.0
rect_scale = Vector2( 0.05, 0.1 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Buttons and stuff/Levels/Level8"]
margin_right = 1024.0
margin_bottom = 1024.0
rect_scale = Vector2( 2, 1 )
custom_fonts/font = SubResource( 5 )
text = "8"
align = 1
valign = 1
autowrap = true

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/buttons = SubResource( 6 )

[connection signal="pressed" from="Buttons/Buttons and stuff/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Buttons/Buttons and stuff/Level" to="." method="_on_Level_pressed"]
[connection signal="pressed" from="Buttons/Buttons and stuff/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Buttons/Buttons and stuff/Levels/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Buttons/Buttons and stuff/Levels/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Buttons/Buttons and stuff/Levels/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="Buttons/Buttons and stuff/Levels/Level4" to="." method="_on_Level4_pressed"]
[connection signal="pressed" from="Buttons/Buttons and stuff/Levels/Level5" to="." method="_on_Level5_pressed"]
[connection signal="pressed" from="Buttons/Buttons and stuff/Levels/Level6" to="." method="_on_Level6_pressed"]
[connection signal="pressed" from="Buttons/Buttons and stuff/Levels/Level7" to="." method="_on_Level7_pressed"]
[connection signal="pressed" from="Buttons/Buttons and stuff/Levels/Level8" to="." method="_on_Level8_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
